updated resume nov 2023

--- a/resume.tex
+++ b/resume.tex
@@ -112,10 +112,11 @@
 % \end{tabular*}
 
 \begin{center}
-    \textbf{\Huge \scshape Jake Ryan} \\ \vspace{1pt}
-    \small 123-456-7890 $|$ \href{mailto:x@x.com}{\underline{jake@su.edu}} $|$ 
-    \href{https://linkedin.com/in/...}{\underline{linkedin.com/in/jake}} $|$
-    \href{https://github.com/...}{\underline{github.com/jake}}
+    \textbf{\Huge \scshape David Dao} \\ \vspace{1pt}
+    \small 949-445-2278 $|$ \href{mailto:x@x.com}{\underline{davidvd@uci.edu}} $|$ 
+    \href{https://linkedin.com/in/...}{\underline{linkedin.com/in/david-v-dao}} $|$
+    \href{https://github.com/...}{\underline{github.com/david-dao28}} $|$
+    \small Aliso Viejo, CA
 \end{center}
 
 
@@ -123,11 +124,14 @@
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Southwestern University}{Georgetown, TX}
-      {Bachelor of Arts in Computer Science, Minor in Business}{Aug. 2018 -- May 2021}
-    \resumeSubheading
-      {Blinn College}{Bryan, TX}
-      {Associate's in Liberal Arts}{Aug. 2014 -- May 2018}
+      {University of California, Irvine}{Irvine, CA}
+      {Bachelor of Science in Computer Science}{Sep. 2020 -- Dec. 2023}
+      \resumeItemListStart
+        \resumeItem{GPA: 3.96}
+        \resumeItem{Relevant Coursework: HCI, User Interface Software, Relational Databases and Web Applications,
+        Non-Relational Databases, Information Retrieval, Programming in Python and Java, ML \& Data Mining }
+      \resumeItemListEnd
+
   \resumeSubHeadingListEnd
 
 
@@ -136,12 +140,13 @@
   \resumeSubHeadingListStart
 
     \resumeSubheading
-      {Undergraduate Research Assistant}{June 2020 -- Present}
-      {Texas A\&M University}{College Station, TX}
+      {Software Engineer Intern}{June -- Sep. 2022, June -- Sep. 2023}
+      {Johns Hopkins Applied Physics Laboratory}{Laurel, MD}
       \resumeItemListStart
-        \resumeItem{Developed a REST API using FastAPI and PostgreSQL to store data from learning management systems}
-        \resumeItem{Developed a full-stack web application using Flask, React, PostgreSQL and Docker to analyze GitHub data}
-        \resumeItem{Explored ways to visualize GitHub collaboration in a classroom setting}
+        \resumeItem{Delivered Angular-based front-end features for a web application under tight deadlines by swiftly translating requirements and undergoing the Software Development Life Cycle.}
+        \resumeItem{Transformed a PostgreSQL database schema to enhance the visibility of the system's status, employing proper techniques for concurrency and maintaining data consistency.}
+        \resumeItem{Expedited an analyst's workflow for annotating documents by implementing a text similarity algorithm (cosine similarity) that groups/collapses near-duplicate documents together.}
+        \resumeItem{Contributed to a web framework using JS/HTML/CSS that helps AI projects select tools specific to its needs and are deemed responsible by a set of ethical principles laid out by the Department of Defense. }
       \resumeItemListEnd
       
 % -----------Multiple Positions Heading-----------
@@ -154,48 +159,43 @@
 %    \resumeSubHeadingListEnd
 %-------------------------------------------
 
-    \resumeSubheading
-      {Information Technology Support Specialist}{Sep. 2018 -- Present}
-      {Southwestern University}{Georgetown, TX}
-      \resumeItemListStart
-        \resumeItem{Communicate with managers to set up campus computers used on campus}
-        \resumeItem{Assess and troubleshoot computer problems brought by students, faculty and staff}
-        \resumeItem{Maintain upkeep of computers, classroom equipment, and 200 printers across campus}
-    \resumeItemListEnd
-
-    \resumeSubheading
-      {Artificial Intelligence Research Assistant}{May 2019 -- July 2019}
-      {Southwestern University}{Georgetown, TX}
-      \resumeItemListStart
-        \resumeItem{Explored methods to generate video game dungeons based off of \emph{The Legend of Zelda}}
-        \resumeItem{Developed a game in Java to test the generated dungeons}
-        \resumeItem{Contributed 50K+ lines of code to an established codebase via Git}
-        \resumeItem{Conducted  a human subject study to determine which video game dungeon generation technique is enjoyable}
-        \resumeItem{Wrote an 8-page paper and gave multiple presentations on-campus}
-        \resumeItem{Presented virtually to the World Conference on Computational Intelligence}
-      \resumeItemListEnd
-
   \resumeSubHeadingListEnd
 
 
 %-----------PROJECTS-----------
 \section{Projects}
     \resumeSubHeadingListStart
+    \resumeProjectHeading
+    {\textbf{ZotWee} $|$ \emph{Google Directions API, BeautifulSoup, HTML/CSS/JavaScript}}{Nov. 2023}
+      \resumeItemListStart
+        \resumeItem{Mentored a team over a 12-hour hackathon to create a web application that navigates UCI students to the nearest gender-neutral and ADA-compliant restrooms on campus.}
+        \resumeItem{Placed 1st out of 20 teams in ZotHacks, UCI's annual, beginner-friendly hackathon.}
+      \resumeItemListEnd
+    \resumeProjectHeading
+    {\textbf{ZotGainz} $|$ \emph{Twilio API, BestTime API, React Native, Firebase, Figma}}{Feb. 2023 - Present}
+      \resumeItemListStart
+        \resumeItem{Creating a mobile application that serves as a gym utility tool for UC Irvine students.}
+        \resumeItem{Won First Place for "Best Use of Twilio API" at Hack UCI, Orange County's largest collegiate hackathon.}
+        \resumeItem{Using React Native and Twilio’s SMS API to build the mobile user interface and push text messages to users upon making a reservation.}
+        \resumeItem{Measured the gym’s expected “busyness” throughout the week by using foot traffic data retrieved with the BestTime API.            }
+        \resumeItem{Collaborating with campus clubs to iteratively enhance the app's features with a community-centric approach.}
+      \resumeItemListEnd
+
       \resumeProjectHeading
-          {\textbf{Gitlytics} $|$ \emph{Python, Flask, React, PostgreSQL, Docker}}{June 2020 -- Present}
+        {\textbf{ZotBins} $|$ \emph{React Native, Firebase, Express.js, Node.js}}{Oct. 2021 - Present}
           \resumeItemListStart
-            \resumeItem{Developed a full-stack web application using with Flask serving a REST API with React as the frontend}
-            \resumeItem{Implemented GitHub OAuth to get data from user’s repositories}
-            \resumeItem{Visualized GitHub data to show collaboration}
-            \resumeItem{Used Celery and Redis for asynchronous tasks}
+            \resumeItem{Creating a mobile application using React Native that spreads awareness on sustainability and zero-waste practices at UCI.}
+            \resumeItem{Independently created a RESTful API connected to our NoSQL database, Firebase Firestore, using Node.js and Express.js.}
+            \resumeItem{Leading weekly team meetings to delegate tasks and foster creative ideation for app’s features.}
+            \resumeItem{Pitched our project to a panel of judges to win \$1000 in the UCI Sustainability Challenge.}
           \resumeItemListEnd
+
       \resumeProjectHeading
-          {\textbf{Simple Paintball} $|$ \emph{Spigot API, Java, Maven, TravisCI, Git}}{May 2018 -- May 2020}
+        {\textbf{Spotflix} $|$ \emph{Spotify Web API, Java, Javascript, HTML/CSS, MySQL }}{Apr. 2023 -- June 2023}
           \resumeItemListStart
-            \resumeItem{Developed a Minecraft server plugin to entertain kids during free time for a previous job}
-            \resumeItem{Published plugin to websites gaining 2K+ downloads and an average 4.5/5-star review}
-            \resumeItem{Implemented continuous delivery using TravisCI to build the plugin upon new a release}
-            \resumeItem{Collaborated with Minecraft server administrators to suggest features and get feedback about the plugin}
+            \resumeItem{Co-developed with a partner a full-stack web application that enables Spotify users to browse and filter through their top songs, artists, and genres.}
+            \resumeItem{Utilized the Microservices architecture on AWS, leveraging Java servlets and JDBC to establish connectivity with a MySQL data source.}
+            \resumeItem{Increased scalability and security through the implementation of reCAPTCHA, cookies, connection pooling, and load balancing using master-slave instances.}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
 
@@ -206,10 +206,9 @@
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Languages}{: Java, Python, C/C++, SQL (Postgres), JavaScript, HTML/CSS, R} \\
-     \textbf{Frameworks}{: React, Node.js, Flask, JUnit, WordPress, Material-UI, FastAPI} \\
-     \textbf{Developer Tools}{: Git, Docker, TravisCI, Google Cloud Platform, VS Code, Visual Studio, PyCharm, IntelliJ, Eclipse} \\
-     \textbf{Libraries}{: pandas, NumPy, Matplotlib}
+     \textbf{Languages}{: Python, Java, C/C++, SQL (MySQL, Postgres), Javascript, Typescipt, HTML/CSS} \\
+     \textbf{Frameworks/Libraries}{: React/React Native, Angular, Node.js, Express, JUnit, pandas, NumPy, scikit-learn} \\
+     \textbf{Developer Tools}{: Git, GitLab, Docker, Google Cloud Platform, AWS, Android Studio, IntelliJ, Jira, Figma, Jupyter Notebook} \\
     }}
  \end{itemize}
 
